Thu Feb 17 16:12:26 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tools/modeling/codegen/model/Sync.h:

          Trailing whitespace.

Thu Feb 17 15:35:22 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * NEWS:
        * README:

          Updates to prepare for release 2.3 of OpenDDS.

Thu Feb 17 15:33:01 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tools/modeling/tests/Arrays/Arrays.codegen:

        * tools/modeling/tests/CfTopic/CfTopic.codegen:

        * tools/modeling/tests/Chained_Data/Chained_Data.codegen:

        * tools/modeling/tests/Codegen/Codegen.codegen:

        * tools/modeling/tests/CompositeKey/CompositeKey.codegen:

        * tools/modeling/tests/CopyTopicQos/CopyTopicQos.codegen:

        * tools/modeling/tests/DataLibRef/DataLibRef.codegen:

        * tools/modeling/tests/DomainZero/DomainZero.codegen:

        * tools/modeling/tests/EmptyLibs/ELTypes.codegen:
        * tools/modeling/tests/EmptyLibs/EmptyLibs.codegen:

        * tools/modeling/tests/Exchange/Exchange.codegen:

        * tools/modeling/tests/ExternalPolicies/ExternalPolicies.codegen:

        * tools/modeling/tests/InvalidNames/InvalidNames.codegen:

        * tools/modeling/tests/Messenger/Messenger.codegen:

        * tools/modeling/tests/MessengerDpQos/MessengerDpQos.codegen:

        * tools/modeling/tests/MessengerGlobalNs/MessengerGlobalNs.codegen:

        * tools/modeling/tests/MessengerMC/MessengerMC.codegen:

        * tools/modeling/tests/MessengerMixed/MessengerMixed.codegen:
        * tools/modeling/tests/MessengerMixed/MessengerTypesMixed.codegen:

        * tools/modeling/tests/MessengerMulti/MessengerMulti.codegen:

        * tools/modeling/tests/MessengerNoPub/MessengerNoPub.codegen:

        * tools/modeling/tests/MessengerNoSub/MessengerNoSub.codegen:

        * tools/modeling/tests/MessengerPubQos/MessengerPubQos.codegen:

        * tools/modeling/tests/MessengerSimpleTypes/MessengerSimpleTypes.codegen:
